<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/product_code_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/product_code"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/product_code_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-light"
            android:layout_toRightOf="@+id/product_code_title_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/product_body_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/description"
            android:layout_below="@+id/product_code_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/product_body_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-light"
            android:layout_below="@+id/product_code_txt"
            android:layout_toRightOf="@+id/product_body_title_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/brand_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/brand"
            android:layout_below="@+id/product_body_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/brand_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-light-black"
            android:layout_toRightOf="@+id/brand_title_txt"
            android:layout_below="@+id/product_body_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/price_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:layout_below="@+id/brand_txt"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-light-black"
            android:layout_toRightOf="@+id/price_title_txt"
            android:layout_below="@+id/brand_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/quantity_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-black"
            android:text="Quantity :"
            android:layout_below="@+id/price_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/quantity_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toRightOf="@+id/quantity_title_txt"
            android:fontFamily="sans-light-black"
            android:layout_below="@+id/price_txt"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

</RelativeLayout>