<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
        <variable
            name="vm"
            type="nz.co.bidone.androidtest.viewmodel.MainActivityViewModel" />
    </data>
<androidx.cardview.widget.CardView
    android:id="@+id/card_id_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/order_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/order_description"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/order_description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/order_description"/>


        <TextView
            android:id="@+id/order_date_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/order_date"
            android:textColor="@android:color/black"
            android:layout_below="@+id/order_description"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/order_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@+id/order_description"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/order_date_label_txt"/>


        <TextView
            android:id="@+id/delivery_date_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/delivery_date"
            android:textColor="@android:color/black"
            android:layout_below="@+id/order_date_label_txt"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/delivery_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@+id/order_date_label_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/delivery_date_label_txt"/>

        <TextView
            android:id="@+id/total_amt_label_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/total_amount"
            android:textColor="@android:color/black"
            android:layout_below="@+id/delivery_date_label_txt"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/total_amt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@+id/delivery_date_label_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/total_amt_label_txt"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/show_products_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_products"
            app:backgroundTint ="@color/green"
            android:layout_below="@+id/total_amt_label_txt"
            app:strokeWidth="6dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_list"
            android:layout_width="match_parent"
            tools:listitem="@layout/product_item"
            android:layout_height="130dp"
            android:layout_below="@+id/show_products_btn"
            android:layout_alignParentBottom="true"/>

        <com.kingfisher.easyviewindicator.RecyclerViewIndicator
            android:id="@+id/circleIndicator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:avi_animation_enable="true"
            app:avi_drawable="@drawable/blue_radius"
            app:avi_drawable_unselected="@drawable/gray_radius"
            app:avi_orientation="horizontal"
            app:avi_height="10dp"
            app:avi_margin="10dp"
            app:avi_width="10dp"
            android:layout_below="@+id/product_list"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>